--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,6 @@
     <string name="session_count">1</string>
     <string name="session_list_title">Finding Inner Peace</string>
     <string name="session_length">5:28</string>
+    <string name="read_more">REAR MORE</string>
 
 </resources>
